--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "big.js": "^5.2.2",
+    "i18next": "^19.1.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/big.js": "^4.0.5"
+    "@types/big.js": "^4.0.5",
+    "@types/react-router-dom": "^5.1.3"
   }
 }
